# coreali

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.github/workflows/: python-app.yml
docs/: coreali_reference.md  development_guide.md  examples.md  index.md
examples/jupyterlab/: run_example.ipynb
examples/jupyterlab/.ipynb_checkpoints/: run_example-checkpoint.ipynb
examples/quickstart/: run_example.py
examples/systemrdl/: i2c_master_core.rdl  logger.rdl  top_sys.rdl
src/coreali/: PythonExporter.py  Selector.py  __init__.py  regmodel.py
src/coreali/registerio/: RegIo.py  RegIoNoHW.py  Tester.py  __init__.py
src/coreali/regmodel/: Component.py  Field.py  Memory.py  Printer.py  Register.py  RegisterFile.py  RegisterModel.py  SelectableComponent.py  Selector.py  __init__.py
src/coreali/templates/: regmodel.py
tests/: conftest.py  regmodel_for_testing.py  requirements.txt  test_examples.py  test_field.py  test_mem.py  test_python.py  test_register_description.rdl  test_registerio.py  test_selectable.py  test_selector.py  test_tester.py  test_use_cases.py
