[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coreali"
authors = [{name = "Silvan Forrer"}]
description = "Convenient Register Access Library"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy",
    "jinja2",
    "systemrdl-compiler",
]
requires-python = ">=3.10"
dynamic = ["version"]
[project.urls]
"Homepage" = "https://github.com/siforrer/coreali"
[tool.setuptools_scm]

